# dotnet-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  release.sh
src/: lib.rs  outdated.rs
