[package]
name = "dotnet-parser"
description = "Parses the JSON output of dotnet outdated"
readme = "README.md"
license = "MIT OR Apache-2.0"
    version = "0.2.12"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/dotnet-parser"
categories = [ "parser-implementations" ]
keywords = [ "dotnet", "dotnet-outdated" ]

exclude = [ ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.thiserror]
version = "~2.0"

[dependencies.clap]
version = "~4.5"
features = ["derive", "cargo"]

[dependencies.tracing]
version = "~0.1"

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[dependencies.serde_json]
version = "~1.0"

[dependencies.serde_path_to_error]
version = "~0.1"

[dependencies.tempfile]
version = "~3.19"

[dev-dependencies.tracing-test]
version = "~0.2"
